<resources>
    <string name="app_name">tp_2</string>
    <string name="number_label" translatable="false">0</string>
    <string name="restar">Restar</string>
    <string name="ocultar">Ocultar</string>
    <string name="sumar">Sumar</string>
    <string name="reset">Reset</string>
    <string name="zoom" translatable="false">Zoom-</string>
    <string name="zoom_plus" translatable="false">Zoom+</string>
    <string name="reiniciar">Reinicar</string>
    <string name="convertir">Convertir</string>
    <string name="conversor">Conversor de Monedas</string>
    <string name="seleccion_moneda">Seleccione una Moneda</string>
    <string name="hint_select">Ingrese Monto en Pesos</string>
    <string name="dolar" translatable="false">DOLAR (USA)</string>
    <string name="euro" translatable="false">EURO</string>
    <string name="real" translatable="false">REAL (BRASIL)</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="resultado">Resultado</string>
    <string name="btn_main_activity">Main Activity</string>
    <string name="btn_other_activity">Secondary Activity</string>
    <string name="volver">Volver</string>
    <string name="call_me">Call me</string>
    <string name="contact_me">Contact Me</string>
</resources>