<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="239dp"
        android:layout_height="341dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/imagetest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txvMainActivityNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/number_label"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/gray_custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <LinearLayout
        android:id="@+id/button_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="38dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txvMainActivityNumber"
        app:layout_constraintVertical_bias="0.3">

        <Button
            android:id="@+id/btnMainActivityAdd"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:textAllCaps="false"
            android:backgroundTint="@color/teal_custom"
            android:text="@string/sumar"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMainActivityZoom"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:textAllCaps="false"
            android:backgroundTint="@color/teal_custom"
            android:text="@string/zoom_plus"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMainActivityHidden"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/teal_custom"
            android:text="@string/ocultar"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="38dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txvMainActivityNumber"
        app:layout_constraintVertical_bias="0.3">

        <Button
            android:id="@+id/btnMainActivitySubstract"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:textAllCaps="false"
            android:backgroundTint="@color/teal_custom"
            android:text="@string/restar"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMainActivityZoomMinus"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:textAllCaps="false"
            android:backgroundTint="@color/teal_custom"
            android:text="@string/zoom"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMainActivityReset"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:textAllCaps="false"
            android:backgroundTint="@color/teal_custom"
            android:text="@string/reset"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
